--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@headlessui/react": "^1.7.18",
     "@stripe/react-stripe-js": "^2.5.0",
     "@stripe/stripe-js": "^2.4.0",
+    "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.8",
     "date-fns": "^3.3.1",
     "emoji-picker-react": "^4.8.0",
